FAQ - fixed horizontal spacing, inner content alignment, and added the button that initializes an email

--- a/app/assets/stylesheets/_faq.scss
+++ b/app/assets/stylesheets/_faq.scss
@@ -34,7 +34,7 @@ p {
 
 
 li {
-  margin-left: 10px;
+  margin-left: 0px;
 }
 /*  #880F42 maroon 
     #1CA29B blue FAQ menu
